live stream realizations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,15 @@
     <button mat-button routerLink="/">HOME</button>
     <button mat-button routerLink="/about">ABOUT</button>
     <button mat-button routerLink="/download">GET IT NOW</button>
+    <button mat-button routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
+    <!-- <button mat-button routerLink="/marketplace">LIVE STREAM TOOLS</button> -->
     <button mat-button [matMenuTriggerFor]="menuT1">TOOLS</button>
     <mat-menu #menuT1="matMenu">
         <button mat-menu-item routerLink="/download">VISUALZ v2</button>
         <button mat-menu-item routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
         <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4 CONVERTER</button>
     </mat-menu>
-    <!-- <button mat-button routerLink="/calendar">CALENDAR</button> -->
+    <button mat-button routerLink="/calendar">CALENDAR</button>
     <button mat-button [matMenuTriggerFor]="menu1">LEARN</button>
     <mat-menu #menu1="matMenu">
         <button mat-menu-item routerLink="/how-it-works">START HERE</button>
@@ -33,13 +35,7 @@
         <button mat-button routerLink="/about">ABOUT</button>
         <button mat-button routerLink="/download">GET IT NOW</button>
         <button mat-button routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
-
-        <!-- <button mat-button [matMenuTriggerFor]="menu2">MARKET</button>
-        <mat-menu #menu2="matMenu">
-            <button mat-menu-item routerLink="/xchange">BROWSE SETS &amp; TRACKS</button>
-            <button mat-menu-item routerLink="/create">CREATE &amp; PUBLISH</button>
-        </mat-menu> -->
-
+        <!-- <button mat-button routerLink="/marketplace">LIVE STREAM TOOLS</button> -->
         <button mat-button [matMenuTriggerFor]="menuT">TOOLS</button>
         <mat-menu #menuT="matMenu">
             <button mat-menu-item routerLink="/download">VISUALZ v2</button>
@@ -48,9 +44,7 @@
             <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4 CONVERTER</button>
             <!-- <button mat-menu-item routerLink="/movie">MUSIC VIDEO CREATOR</button> -->
         </mat-menu>
-
-        <!-- <button mat-button routerLink="/calendar">CALENDAR</button> -->
-
+        <button mat-button routerLink="/calendar">CALENDAR</button>
         <button mat-button [matMenuTriggerFor]="menu">LEARN</button>
         <mat-menu #menu="matMenu">
             <button mat-menu-item routerLink="/how-it-works">START HERE</button>
