--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -2,7 +2,7 @@
     <div class="content-inner-wrapper">
         <h1 class="center">CALENDAR</h1>
         <p class="center">
-            Here at Visualz we like to stay busy. Below is a list of visualz and visualz partners events.
+            Here at Visualz we like to stay busy. Below is a list of visualz and visualz collaborater events.
         </p>
 
         <iframe
@@ -12,14 +12,14 @@
         <h2 class="collab">
             Interested in collaborating?
         </h2>
-        <p>
+        <p class="center">
             The Visualz Team can and wants to do remote realtime visuals for your live streams.
         </p>
-        <p>
+        <p class="center">
             Once live events are possible again we'd love to do live and remote visuals for those as well.
         </p>
-        <p>
-            Contact visualzapp.contact@gmail.com to setup a demo or just talk about your visual needs as an artist.
+        <p class="center">
+            Visualzapp.contact@gmail.com to setup a demo or just talk about your visual needs as an artist.
         </p>
     </div>
 </div>
