--- a/src/app/stream-start/stream-start.component.html
+++ b/src/app/stream-start/stream-start.component.html
@@ -25,26 +25,26 @@
         </div>
         <div class="flex-container" *ngIf="!roomStart && !avStart">
             <a class="rooms-grid" routerLink="/download">
-                <h3>Stream Visualz in OBS remotely</h3>
+                <h3>Add Visualz To LiveStreams & Cameras</h3>
                 <p>
-                    Download v2 to stream visuals. Control visuals in any OBS stream remotely
-                    or in-person.
+                    Download v2 to stream visuals. Control realtime visuals in any OBS stream remotely
+                    or in-person. Use Visualz to add effects to your camera source and input to OBS.
                 </p>
             </a>
             <a class="rooms-grid" (click)="toggleRoomStart()">
-                <h3>Realtime Room</h3>
+                <h3>Realtime Party <i>beta</i></h3>
                 <p>
-                    Live Stream to your fans and friends directly in the browser.
-                    Add audio reactive visuals to your stream.
+                    Stream to your fans and friends directly in the browser.
+                    Add audio reactive visuals.
                 </p>
             </a>
-            <a class="rooms-grid" (click)="toggleAvStart()">
+            <!-- <a class="rooms-grid" (click)="toggleAvStart()">
                 <h3>AV Window</h3>
                 <p>
                     Open an audio/video window to add effects to your
                     camera and then input that into OBS or Visualz.
                 </p>
-            </a>
+            </a> -->
             <a class="rooms-grid" (click)="skins()">
                 <h3>Live Stream Skins</h3>
                 <p>
@@ -55,13 +55,13 @@
         </div>
 
         <div class="blue" *ngIf="roomStart">
-            <h2>Realtime Room</h2>
+            <h2>Realtime Party</h2>
             <p>
-                Create a room name. Push start. Have fun.
+                Create a party name. Push start. Have fun.
             </p>
             <form class="example-form" name="form1">
                 <mat-form-field class="example-full-width">
-                    <mat-label>Room Name</mat-label>
+                    <mat-label>Party Name</mat-label>
                     <input matInput required class="inputy" placeholder="Ex. Sam's Set" [(ngModel)]="label" name="label"
                         value="">
                 </mat-form-field>
@@ -75,18 +75,13 @@
             </form>
         </div>
 
-        <div class="green" *ngIf="avStart">
+        <!-- <div class="green" *ngIf="avStart">
             <h2>AV Window</h2>
             <p>
                 Push Start. Glitch yo' bad self.
             </p>
             <form class="example-form" name="form1">
-                <!-- <mat-form-field class="example-full-width">
-                    <mat-label>Room Name</mat-label>
-                    <input matInput required class="inputy" placeholder="Ex. Sam's Set" [(ngModel)]="label" name="label"
-                        value="">
-                </mat-form-field>
-                <br><br> -->
+                
                 <button (click)="toggleAvStart()" mat-raised-button class="gray button bigtext">
                     Cancel
                 </button>
@@ -94,24 +89,24 @@
                     Start
                 </button>
             </form>
-        </div>
+        </div> -->
     </div>
     <br><br><br>
 </div>
 
 <header class="skew">
-    <h2>BROWSE ROOMS</h2>
-    <small>*Streams are removed after 24 hours.</small>
+    <h2>BROWSE PUBLIC PARTIES</h2>
+    <small>*Parties are removed after 24 hours.</small>
 </header>
 
 <div class="content-wrapper white feature">
-    <br><br><br><br>
+    <br><br><br>
     <div class="flex-container">
         <!-- <div *ngFor="let key of objectKeys(track.modules[editingModule].settings)"> -->
 
         <a *ngFor="let room of rooms" class="rooms-grid rooms" [hidden]="!room.label || room.label == ''">
             <h3>{{room.label}}</h3>
-            <p>{{objectKeys(room.guests).length}} Total Watchers</p>
+            <p>{{objectKeys(room.guests).length}} Fam</p>
             <img src="https://robohash.org/{{room.host}}?set=set5"
                 [ngClass]="{'grayscale': (!room.live || room.live == 'false')}" />
             <button mat-raised-button class="pink button" *ngIf="room.live && room.live == 'true'"
@@ -120,7 +115,7 @@
                 Air</button>
         </a>
     </div>
-    <br><br>
+    <br><br><br>
 </div>
 
 <header class="skew">
