live stream realizations

--- a/src/app/live-stream/live-stream.component.html
+++ b/src/app/live-stream/live-stream.component.html
@@ -76,7 +76,7 @@
             You can see and hear the stream host, but the host can't see or
             hear you.
         </li>
-        <li>Partys will be automatically removed after 24 hours.</li>
+        <li>Parties will be automatically removed after 24 hours.</li>
     </ol>
 
     <h1>Share This Streaming URL</h1>
