--- a/src/app/stream-start/stream-start.component.html
+++ b/src/app/stream-start/stream-start.component.html
@@ -9,8 +9,7 @@
             </p>
 
             <p>
-                We've been focusing on streaming. And to that end we'd like to present this suite of
-                tools based on what we've learned intended to improve your livestream's visuals.
+                We've been focusing on streaming. Here are some tools intended to improve your stream's visuals.
             </p>
 
             <p>
@@ -48,8 +47,8 @@
             <a class="rooms-grid" (click)="skins()">
                 <h3>Live Stream Skins</h3>
                 <p>
-                    Open an audio/video window to add effects to your
-                    camera and then input that into OBS or Visualz.
+                    Add a nice touch to your stream with a skin.
+                    Use these as is, or as a template to create your own.
                 </p>
             </a>
         </div>
