--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -30,11 +30,17 @@
                 Contact visualzapp.contact@gmail.com to collab or hire us.
             </p>
 
-            <h2>Investors</h2>
+            <h2>Reach Out</h2>
             <p>
-                VISUALZ is looking for backing. Opportunies will be gone quickly. Please contact
-                visualzapp.contact@gmail.com for more info.
+                We love hearing from people. That's how we get new ideas, make new frieds, and collaborate. Contact <a
+                    href="mailto:visualzapp.contact@gmail.com">visualzapp.contact@gmail.com</a>.
             </p>
+
+            <h2>Press, Sponsors, Investors Contact</h2>
+            <p>
+                <a href="mailto:visualzapp.contact@gmail.com">Visualzapp.contact@gmail.com</a> for more info.
+            </p>
+
 
         </div>
     </div>
