--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,12 +8,12 @@
     <button mat-button routerLink="/download">GET IT NOW</button>
     <button mat-button routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
     <!-- <button mat-button routerLink="/marketplace">LIVE STREAM TOOLS</button> -->
-    <button mat-button [matMenuTriggerFor]="menuT1">TOOLS</button>
+    <!-- <button mat-button [matMenuTriggerFor]="menuT1">TOOLS</button>
     <mat-menu #menuT1="matMenu">
         <button mat-menu-item routerLink="/download">VISUALZ v2</button>
         <button mat-menu-item routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
         <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4 CONVERTER</button>
-    </mat-menu>
+    </mat-menu> -->
     <button mat-button routerLink="/calendar">CALENDAR</button>
     <button mat-button [matMenuTriggerFor]="menu1">LEARN</button>
     <mat-menu #menu1="matMenu">
@@ -36,14 +36,14 @@
         <button mat-button routerLink="/download">GET IT NOW</button>
         <button mat-button routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
         <!-- <button mat-button routerLink="/marketplace">LIVE STREAM TOOLS</button> -->
-        <button mat-button [matMenuTriggerFor]="menuT">TOOLS</button>
+        <!-- <button mat-button [matMenuTriggerFor]="menuT">TOOLS</button>
         <mat-menu #menuT="matMenu">
             <button mat-menu-item routerLink="/download">VISUALZ v2</button>
             <button mat-menu-item routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
-            <!-- <button mat-menu-item routerLink="/cc-video-library">CC VIDEO LIBRARY</button> -->
+            <button mat-menu-item routerLink="/cc-video-library">CC VIDEO LIBRARY</button>
             <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4 CONVERTER</button>
-            <!-- <button mat-menu-item routerLink="/movie">MUSIC VIDEO CREATOR</button> -->
-        </mat-menu>
+            <button mat-menu-item routerLink="/movie">MUSIC VIDEO CREATOR</button>
+        </mat-menu> -->
         <button mat-button routerLink="/calendar">CALENDAR</button>
         <button mat-button [matMenuTriggerFor]="menu">LEARN</button>
         <mat-menu #menu="matMenu">
