--- a/src/app/stream-start/stream-start.component.html
+++ b/src/app/stream-start/stream-start.component.html
@@ -18,7 +18,7 @@
 
             <p>
                 <a href="https://www.buymeacoffee.com/visualz" target="_blank">
-                    Are you using the free free stuff? Consider buying our developers a coffee.
+                    Using for free? Consider buying our developers a coffee.
                 </a>
             </p>
         </div>
@@ -69,7 +69,7 @@
                     Cancel
                 </button>
                 <button (click)="start()" mat-raised-button class="pink button bigtext">
-                    Start Room
+                    Start Party
                 </button>
             </form>
         </div>
