--- a/src/app/stream-start/stream-start.component.scss
+++ b/src/app/stream-start/stream-start.component.scss
@@ -20,6 +20,10 @@ $breakpoint-mobile: 768px;
 
     p {
         color: #fff !important;
+
+        a {
+            color: #fff;
+        }
     }
 }
 
