--- a/src/styles.scss
+++ b/src/styles.scss
@@ -220,6 +220,13 @@ p {
     display: block;
 }
 
+p {
+    a {
+        color: #e91e63;
+        
+    }
+}
+
 .content-wrapper {
     padding: 100px 40px 140px;
     overflow-x: hidden;
