update font size remote

--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -19,7 +19,7 @@
             &nbsp;&nbsp;&nbsp;
         </p>
         <div>
-            <h3>MINIMUM REQUIREMENTS</h3>
+            <h3>RECOMMENDED MIN REQUIREMENTS</h3>
             <p>
                 macOS 10.11 or higher
             </p>
@@ -61,7 +61,7 @@
                 target="_blank">Allow Non-Store Apps to Install on Windows 10</a>
         </p>
         <div>
-            <h3>MINIMUM REQUIREMENTS</h3>
+            <h3>RECOMMENDED MIN REQUIREMENTS</h3>
             <p>
                 <!-- Windows 7 SP1 /  -->
                 Windows 8 /
