--- a/src/app/remote-que/remote-que.component.scss
+++ b/src/app/remote-que/remote-que.component.scss
@@ -18,6 +18,10 @@ mat-button-toggle-group {
     width: 100%;
 }
 
+.lefttrack {
+    font-size: 16px !important;
+}
+
 .no-tracks {
     margin: 40px auto;
     width: 50%;
