--- a/src/app/how-c/how-c.component.html
+++ b/src/app/how-c/how-c.component.html
@@ -16,7 +16,7 @@
         <p>
             Stream the contents of the preview window directly to
             the browser so you can perform live visuals remotely
-            for events or OBS streams.
+            for events or OBS/Zoom streams.
         </p>
     </div>
 
