--- a/src/app/remote-screen/remote-screen.component.html
+++ b/src/app/remote-screen/remote-screen.component.html
@@ -1,2 +1,5 @@
 <video id="externalVideo" class="external-video" autoplay muted controls></video>
-<!-- <img class="watermark" src="../../assets/images/watermark.png" /> -->
+<img class="watermark" *ngIf="plan != 2" src="../../assets/images/watermark.png" />
+<div class="qr-wrapper">
+    <img class="qr" src="{{this.qr}}" />
+</div>
