--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -3,7 +3,7 @@
         <!-- <h1>Realtime Audio Reactive Experiences</h1> -->
         <h1>Audio Reactive Visuals For Streams</h1>
         <h2>
-            Control realtime visuals in any OBS live stream or event <strong>remotely</strong>
+            Control realtime visuals in any OBS/Zoom live stream or event <strong>remotely</strong>
             or in-person.
         </h2>
         <h2>
@@ -83,9 +83,12 @@
                 </ul>
                 <div class="smaller">
 
-                    <!-- 4/28/20 -->
+                    <!-- -->
                     <h2>Update 2.0.7</h2>
                     <ul class='new'>
+                        <li>$10 special on commercial licenses.</li>
+                        <li>Added QR to remote screens for easy mobile sharing.</li>
+                        <li>Streaming failure protection and auto-reconnect.</li>
                         <li>Added replicate track feature.</li>
                         <li>Update to beat triggers.</li>
                         <li>Update to thumbails overall.</li>
@@ -115,7 +118,7 @@
                     <!-- 4/20/20 -->
                     <h2>Update 2.0.4</h2>
                     <ul class='new'>
-                        <li>Stream to browser enabled for free use. Allows for remote OBS integration.</li>
+                        <li>Stream to browser enabled for free use. Allows for remote OBS/Zoom integration.</li>
                     </ul>
 
                     <!-- 4/15/20 -->
@@ -173,8 +176,8 @@
         <img src="../../assets/images/feature2.jpg" />
         <div class="feature-text">
             <mat-icon aria-hidden="false" aria-label="FanCam" class="ico">cast_connected</mat-icon>
-            <h1>LiveStream Visualz + OBS Integration</h1>
-            <h2>Remote/Local visuals streaming sourced into OBS</h2>
+            <h1>LiveStream Visualz + OBS/Zoom Integration</h1>
+            <h2>Remote/Local visuals streaming sourced into OBS/Zoom</h2>
             <div class="big-only">
                 <p>
                     Live stream host in New York and your DJs are in Seattle.
