--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -105,9 +105,9 @@
                 <li>Visual effects.</li>
                 <li>Audio reactive visual effects.</li>
                 <li>Stream to browser.</li>
-                <li>OBS integration.</li>
+                <li>OBS &amp; Zoom integration (watermarked).</li>
                 <li>Camera support.</li>
-                <li>wRTC Mobile video support.</li>
+                <li>Streaming mobile video support.</li>
                 <li>Smartphone remote control.</li>
                 <li>Gif &amp; image search.</li>
                 <li>CC video library.</li>
@@ -121,7 +121,7 @@
 
             </ul>
         </div>
-
+        <!-- 
         <div class="price_card">
             <div class="header">
                 <span class="name">EDUCATIONAL</span>
@@ -136,7 +136,7 @@
                 <li>Output resolution specification.</li>
             </ul>
 
-            <!-- PROD EDUCATIONAL LICENSE -->
+            PROD EDUCATIONAL LICENSE
             <div [hidden]="testMode === true">
                 <button color="primary" class="pink" id="checkout-button-plan_H5V1qwEOIY0IXK" role="link"
                     mat-raised-button>
@@ -144,39 +144,60 @@
                 </button>
             </div>
 
-            <!-- TEST EDUCATIONAL LICENCSE -->
+            TEST EDUCATIONAL LICENCSE 
             <div [hidden]="testMode === false">
                 <button color="primary" class="pink" id="checkout-button-plan_H5UfUDScLylpyD" role="link"
                     mat-raised-button>
                     TEST Buy Educational License
                 </button>
             </div>
-        </div>
+        </div> -->
 
         <div class="price_card">
             <div class="header">
                 <span class="name">COMMERCIAL</span>
-                <span class="desc">Fully featured and for use in paying projects and at venues.</span>
-                <span class="price">$40 yearly</span>
+                <span class="desc">Fully featured and for use in paying projects, and at venues.</span>
+                <span class="price"><s style="color:#333;">$40</s> $10 yearly</span>
             </div>
             <ul class="features">
-                <li>All Non-Commercial &amp; Educational Features.</li>
+                <li><strong>Special one time price<br>$10 yearly</strong></li>
+                <li>All the non-commercial features plus:</li>
                 <li>Audience contact collection.</li>
+                <li>Fan Selfies (FanCam).</li>
+                <li>Mobile device controller.</li>
+                <li>Store media in the cloud.</li>
+                <li>OBS &amp; Zoom integration<br>(NO watermark).</li>
             </ul>
 
-            <!-- PROD COMMERCIAL LICENSE -->
+            <!-- PROD COMMERCIAL LICENSE
             <div [hidden]="testMode === true">
                 <button color="primary" class="pink" id="checkout-button-plan_H5V8KwiRi8BxEK" role="link"
                     mat-raised-button>
                     Buy Commercial License
                 </button>
-            </div>
+            </div> -->
 
-            <!-- TEST COMMERCIAL LICENCSE -->
+            <!-- TEST COMMERCIAL LICENCSE
             <div [hidden]="testMode === false">
                 <button color="primary" class="pink" id="checkout-button-plan_H5UhS6ktwnPAfO" role="link"
                     mat-raised-button>
                     TEST Buy Commercial License
+                </button>
+            </div> -->
+
+            <!-- PROD COMMERCIAL LICENSE -->
+            <div [hidden]="testMode === true">
+                <button color="primary" class="pink" id="checkout-button-plan_HCHnNpbdcUHUCL" role="link"
+                    mat-raised-button>
+                    Buy Commercial License Special
+                </button>
+            </div>
+
+            <!-- TEST COMMERCIAL LICENSE SPECIAL -->
+            <div [hidden]="testMode === false">
+                <button color="primary" class="pink" id="checkout-button-plan_HCHlDgrJZXt7r0" role="link"
+                    mat-raised-button>
+                    TEST Buy Commercial License Special
                 </button>
             </div>
 
