--- a/src/app/remote-screen/remote-screen.component.scss
+++ b/src/app/remote-screen/remote-screen.component.scss
@@ -10,6 +10,35 @@
     /*opacity: 0.6;*/
 }
 
+
 .watermark {
     position: absolute;
+    z-index: 3;
+    bottom: 100px; 
+    right: 20px;
+    width: 20vw;
+    height: 20vw;
+    opacity: 0.6;
+}
+
+.qr-wrapper {
+    position: absolute;
+    z-index: 3;
+    top: 20px;
+    right: 20px;
+    width: 33vw;
+    height: 33vw;
+
+    .qr {
+        width: 100%;
+        height: 100%;
+        display: none;
+        
+    }
+
+    &:hover {
+        .qr {
+            display: block;
+        }
+    }
 }
