--- a/src/app/fan-screen/fan-screen.component.scss
+++ b/src/app/fan-screen/fan-screen.component.scss
@@ -2,15 +2,29 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    font-size: 14px;
+    color: #fff;
+}
+
+@media screen and (min-width: 100px) and (max-width: 767px) and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
 }
 
 .cam {
     width: 50vw;
     position: absolute;
-    top: 0px;
+    top: -20vw;
     right: 0px;
-    z-index: 0;
-    background: #333;
+    z-index: 1;
+    background: #000;
 
     &.user {
         transform: rotateY(180deg);
@@ -18,6 +32,16 @@
         -moz-transform:rotateY(180deg); /* Firefox */
     }
 
+}
+
+.videoback {
+    background: #000;
+    width: 50vw;
+    height: 50vw;
+    top: 0px;
+    right: 0px;
+    z-index: 0;
+    position:absolute;
 }
 
 .overlay {
@@ -32,13 +56,43 @@
     text-align: center;
 }
 
-canvas {
+.torch-overlay {
     position: absolute;
+    z-index: 6;
+    height: 100vh;
+    width: 100vw;
     top: 0px;
     left: 0px;
+    pointer-events:none;
+    opacity: 0.4;
+}
+
+canvas {
+    position: absolute;
+    top: -20vw;
+    right: 0px;
     z-index: 1;
-    width: 25vw;
+    width: 50vw;
     //height: calc(100vh + 0px);
+}
+
+.external-video {
+    
+    border: none;
+    bottom: 73px;
+    margin: 0px;
+    padding: 0px;
+    z-index: 2;
+    position: absolute;
+    background: #000;
+    width: 1px;
+    height: 1px;
+    /*opacity: 0.6;*/
+
+    &.active {
+        width: 100vw;
+        height: 50vh;
+    }
 }
 
 .take-pic {
@@ -55,6 +109,16 @@ canvas {
     z-index: 2;
 }
 
+.goodArea {
+    border: 1px solid blue;
+    width: 30vw;
+    position: absolute;
+    z-index: 3;
+    right: 8vw;
+    height: 12.5vh;
+    top: 7vh;
+}
+
 .playing-video {
     position: absolute; 
     //top: -77px; 
@@ -62,7 +126,15 @@ canvas {
     top: 0px;
     left: 0px;
     z-index: 4;
+}
 
+.qr {
+    position: absolute;
+    z-index: 3;
+    top: 0px;
+    left: 0px;
+    width: 50vw;
+    height: 50vw;
 }
 
 .grant-perms {
@@ -83,6 +155,13 @@ canvas {
     background-color: #ff4081;
     color: #333;
     font-size: 40px;
+    border: 0px;
+
+    &.wait {
+        z-index: 6;
+        background-color: #333;
+        color: #fff;
+    }
 }
 
 .main-wrapper {
@@ -100,4 +179,5 @@ body, html {
     position: absolute;
     top: 30vh;
     width: 100%;
+    z-index:3;
 }
