--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -86,6 +86,7 @@
                     <!-- -->
                     <h2>Update 2.0.7</h2>
                     <ul class='new'>
+                        <li>Major updates to FanCam mobile UI/UX.</li>
                         <li>$10 special on commercial licenses.</li>
                         <li>Added QR to remote screens for easy mobile sharing.</li>
                         <li>Streaming failure protection and auto-reconnect.</li>
@@ -109,36 +110,42 @@
                         <li>Bugfix to fx issue after moving scene to another track.</li>
                     </ul>
 
+                    <!-- 
                     <h2>Update 2.0.5</h2>
                     <ul class='new'>
                         <li>Performace Improvement.</li>
                         <li>Windows Version Available.</li>
-                    </ul>
+                    </ul> 
+                    -->
 
-                    <!-- 4/20/20 -->
+                    <!-- 4/20/20
                     <h2>Update 2.0.4</h2>
                     <ul class='new'>
                         <li>Stream to browser enabled for free use. Allows for remote OBS/Zoom integration.</li>
                     </ul>
+                    -->
 
-                    <!-- 4/15/20 -->
+                    <!-- 4/15/20
                     <h2>Update 2.0.3</h2>
                     <ul class='new'>
                         <li>Issue on computers with high resolutions.</li>
                         <li>Audio source selection bug</li>
                     </ul>
+                    -->
 
-                    <!-- 4/14/20 -->
+                    <!-- 4/14/20
                     <h2>Update 2.0.2</h2>
                     <ul class='new'>
                         <li>Video library loading issue.</li>
                     </ul>
+                    -->
 
-                    <!-- 4/13/20 -->
+                    <!-- 4/13/20
                     <h2>Update 2.0.1</h2>
                     <ul class='new'>
                         <li>Mac Version Available.</li>
                     </ul>
+                    -->
                 </div>
             </div>
         </div>
