--- a/src/app/fan-screen/fan-screen.component.scss
+++ b/src/app/fan-screen/fan-screen.component.scss
@@ -110,7 +110,9 @@ canvas {
 }
 
 .goodArea {
-    border: 1px solid blue;
+    border: 4px solid #fff;
+    opacity: 0.6;
+    border-radius: 5px;
     width: 30vw;
     position: absolute;
     z-index: 3;
