--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -58,19 +58,19 @@
             <div class="">
                 <h2>What's New in Version 2</h2>
                 <ul class='new'>
-                    <li>Released April 2020.</li>
+                    <li>OBS + Zoom Livestream Integration</li>
+                    <li>Muptiple external windows/diplays.</li>
+                    <li>Stream to browser.</li>
+                    <li>Mobile device controller.</li>
+                    <li>Control your audiences phone screen and flashlight.</li>
+                    <li>Stream the visuals to audiences phones.</li>
+                    <li>Updated smartphone remote control.</li>
+                    <li>The audience can send selfies to the composition.</li>
                     <li>Added visual effects.</li>
-                    <li>Updated camera feature. Now with streaming mobile video support.</li>
-                    <li>With permission the audience can send selfies to the composition.</li>
+                    <li>Updated camera features. Now with streaming mobile video support.</li>
                     <li>Updates to remote control.</li>
                     <li>Gif &amp; image search.</li>
                     <li>CC video library.</li>
-                    <li>3d audio reactive visualizations.</li>
-                    <li>Optimized beat detection.</li>
-                    <li>Multiple screens.</li>
-                    <li>Stream to browser.</li>
-                    <li>Hotkeys.</li>
-                    <li>Mobile device controller.</li>
                     <li>With permission control your audiences phone screen and flashlight.</li>
                     <li>Updated smartphone remote control.</li>
                     <li>Improved UI/UX.</li>
@@ -486,13 +486,13 @@
         <h2 class="collab">
             Interested in collaborating?
         </h2>
-        <p>
+        <p class="center">
             The Visualz Team can and wants to do remote realtime visuals for your live streams.
         </p>
-        <p>
+        <p class="center">
             Once live events are possible again we'd love to do live and remote visuals for those as well.
         </p>
-        <p>
+        <p class="center">
             Contact visualzapp.contact@gmail.com to setup a demo or just talk about your visual needs as an artist.
         </p>
     </div>
