--- a/src/app/remote-screen/remote-screen.component.scss
+++ b/src/app/remote-screen/remote-screen.component.scss
@@ -16,8 +16,8 @@
     z-index: 3;
     bottom: 100px; 
     right: 20px;
-    width: 20vw;
-    height: 20vw;
+    //width: 20vw;
+    height: 10vw;
     opacity: 0.6;
 }
 
