--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper normal">
     <h1 class="center">
-        Download VISUALZ v2.0.7<br>
+        Download VISUALZ v2.1.0<br>
         Free for Non-Commercial Use
     </h1>
 
@@ -8,8 +8,8 @@
 
     <div class="bordered">
         <img class="mac" src="../../assets/images/macos.png" />
-        <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.7.dmg" target="_blank" mat-raised-button
-            (click)="downloadMac()" class="pink button">
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.0/Visualz-2.1.0.dmg"
+            target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
             Download For Mac
         </a>
         <p class="center">
@@ -49,8 +49,8 @@
 
     <div class="bordered">
         <img class="windows" src="../../assets/images/windows.png" />
-        <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-Setup-2.0.7w.rar" mat-raised-button
-            class="pink button" target="_blank" (click)="downloadWindows()">
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.0/Visualz-Setup-2.1.0.exe"
+            mat-raised-button class="pink button" target="_blank" (click)="downloadWindows()">
             Download Windows
         </a>
         <p class="center">
