boom baby lets go

--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -106,6 +106,7 @@
                 <li>Audio reactive visual effects.</li>
                 <li>Stream to browser.</li>
                 <li>OBS &amp; Zoom integration (watermarked).</li>
+                <li>Enhances streaming connectivity and auto-reconnect streaming connectivity.</li>
                 <li>Camera support.</li>
                 <li>Streaming mobile video support.</li>
                 <li>Smartphone remote control.</li>
@@ -113,7 +114,7 @@
                 <li>CC video library.</li>
                 <li>3d audio reactive visualizations.</li>
                 <li>Multiple screens.</li>
-                <li>Future Updates</li>
+                <li>Automatic Updates</li>
 
                 <li><s>Max output resolution 1280x1280.</s></li>
                 <li>Output resolution specification.</li>
