--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -106,7 +106,8 @@
                 <li>Audio reactive visual effects.</li>
                 <li>Stream to browser.</li>
                 <li>OBS &amp; Zoom integration (watermarked).</li>
-                <li>Enhances streaming connectivity and auto-reconnect streaming connectivity.</li>
+                <li>Enhanced streaming connectivity with Ice & Turn server negotiation.</li>
+                <li>Auto reconnect and persistant stream urls.</li>
                 <li>Camera support.</li>
                 <li>Streaming mobile video support.</li>
                 <li>Smartphone remote control.</li>
