--- a/src/app/canceled/canceled.component.html
+++ b/src/app/canceled/canceled.component.html
@@ -1,5 +1,5 @@
 <div class="content-wrapper normal">
-    <h1 class="center">CANCELED</h1>
+    <h1 class="center"></h1>
     <h2>Sorry to see you go :(</h2>
     <p>You can still use the software under the Non-Commercial license. Feel free to contact us with feedback.</p>
 
