--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -36,7 +36,7 @@
             <img src="../../assets/images/icon.ico" class="ico" />
 
             <div *ngIf="deviceInfo.os == 'Mac' || deviceInfo.os == 'iOS'" class="clearfix">
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.0/Visualz-2.1.0.dmg"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.1/Visualz-2.1.1.dmg"
                     target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
                     Download Mac
                 </a>
@@ -44,7 +44,7 @@
             </div>
 
             <div *ngIf="deviceInfo.os != 'Mac' && deviceInfo.os != 'iOS'" class="clearfix">
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.0/Visualz-Setup-2.1.0.exe"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.1/Visualz-Setup-2.1.1.exe"
                     target="_blank" mat-raised-button (click)="downloadWindows()" class="pink button">
                     Download Windows
                 </a>
@@ -53,7 +53,7 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.1.0</h1>
+            <h1>VISUALZ v2.1.1</h1>
 
             <div class="">
                 <h2>What's New in Version 2</h2>
@@ -83,6 +83,13 @@
                     <li>Much, much, more.</li>
                 </ul>
                 <div class="smaller">
+
+
+                    <!-- 5/7/20 -->
+                    <h2>Update 2.1.1</h2>
+                    <ul class='new'>
+                        <li>General updates.</li>
+                    </ul>
 
                     <!-- 5/7/20 -->
                     <h2>Update 2.1.0</h2>
