--- a/src/app/remote-que/remote-que.component.scss
+++ b/src/app/remote-que/remote-que.component.scss
@@ -14,6 +14,11 @@ mat-button-toggle-group {
     height: 40px;
 }
 
+input {
+    font-size: 14px;
+    color: #fff;
+}
+
 .mat-button-toggle-group, .mat-button-toggle-standalone {
     width: 100%;
 }
