--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper normal">
     <h1 class="center">
-        Download VISUALZ v2.1.1<br>
+        Download VISUALZ v2.1.2<br>
         Free for Non-Commercial Use
     </h1>
 
@@ -8,7 +8,7 @@
 
     <div class="bordered">
         <img class="mac" src="../../assets/images/macos.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.1/Visualz-2.1.1.dmg"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.2/Visualz-2.1.2.dmg"
             target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
             Download For Mac
         </a>
@@ -49,7 +49,7 @@
 
     <div class="bordered">
         <img class="windows" src="../../assets/images/windows.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.1/Visualz-Setup-2.1.1.exe"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.2/Visualz-Setup-2.1.2.exe"
             mat-raised-button class="pink button" target="_blank" (click)="downloadWindows()">
             Download Windows
         </a>
@@ -99,6 +99,10 @@
                 <span class="price">FREE</span>
             </div>
             <ul class="features">
+
+                <li>NEW: Music video recorder (watermarked).</li>
+                <li>NEW: Record &amp; reuse feature.</li>
+
                 <li>Compose sets &amp; tracks of visual media.</li>
                 <li>Manual &amp; automated audio reactive scene transitioning.</li>
                 <li>Audio analysis and beat detection.</li>
@@ -164,6 +168,7 @@
             <ul class="features">
                 <li><strong>Special one time price<br>$10 yearly</strong></li>
                 <li>All the non-commercial features plus:</li>
+                <li>NEW: Music video recorder (NO watermark).</li>
                 <li>Audience contact collection.</li>
                 <li>Fan Selfies (FanCam).</li>
                 <li>Mobile device controller.</li>
