all marketplace stuff

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -10,6 +10,14 @@
             <pre *ngIf="auth.userProfile$ | async as profile">
             <code>{{ profile | json }}</code>
             </pre>
+
+            <!-- Account level -->
+
+
+            <!-- Email -->
+
+            <!-- Cancel -->
+
         </div>
     </div>
 </div>
