--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,8 @@
     <button mat-button routerLink="/about">ABOUT</button>
     <button mat-button routerLink="/download">GET IT NOW</button>
     <button mat-button routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
-    <!-- <button mat-button routerLink="/marketplace">LIVE STREAM TOOLS</button> -->
-    <!-- <button mat-button [matMenuTriggerFor]="menuT1">TOOLS</button>
-    <mat-menu #menuT1="matMenu">
-        <button mat-menu-item routerLink="/download">VISUALZ v2</button>
-        <button mat-menu-item routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
-        <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4 CONVERTER</button>
-    </mat-menu> -->
-    <button mat-button routerLink="/calendar">CALENDAR</button>
+    <!-- <button mat-button routerLink="/calendar">CALENDAR</button> -->
+    <button mat-button routerLink="/marketplace">MARKETPLACE</button>
     <button mat-button [matMenuTriggerFor]="menu1">LEARN</button>
     <mat-menu #menu1="matMenu">
         <button mat-menu-item routerLink="/how-it-works">START HERE</button>
@@ -35,7 +29,6 @@
         <button mat-button routerLink="/about">ABOUT</button>
         <button mat-button routerLink="/download">GET IT NOW</button>
         <button mat-button routerLink="/live-stream-tools">LIVE STREAM TOOLS</button>
-        <!-- <button mat-button routerLink="/marketplace">LIVE STREAM TOOLS</button> -->
         <!-- <button mat-button [matMenuTriggerFor]="menuT">TOOLS</button>
         <mat-menu #menuT="matMenu">
             <button mat-menu-item routerLink="/download">VISUALZ v2</button>
@@ -44,7 +37,8 @@
             <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4 CONVERTER</button>
             <button mat-menu-item routerLink="/movie">MUSIC VIDEO CREATOR</button>
         </mat-menu> -->
-        <button mat-button routerLink="/calendar">CALENDAR</button>
+        <!-- <button mat-button routerLink="/calendar">CALENDAR</button> -->
+        <button mat-button routerLink="/marketplace">MARKETPLACE</button>
         <button mat-button [matMenuTriggerFor]="menu">LEARN</button>
         <mat-menu #menu="matMenu">
             <button mat-menu-item routerLink="/how-it-works">START HERE</button>
@@ -53,22 +47,18 @@
             <button mat-menu-item routerLink="/support">COMMUNITY</button>
             <!-- <button mat-menu-item>visualzapp.contact@gmail.com</button> -->
         </mat-menu>
-
-
         <!-- <button href="mailto:visualzapp.contact@gmail.com" mat-button>CONTACT</button> -->
-        <!-- 
         <button mat-raised-button class="btn btn-primary btn-margin" *ngIf="!auth.loggedIn" (click)="auth.login()">
             LOG IN
         </button>
-
         <button mat-button [matMenuTriggerFor]="menu3" *ngIf="auth.loggedIn" class="btn btn-primary btn-margin">
             <img [src]="auth.userProfile$.source._value.picture" /> {{ auth.userProfile$.source._value.given_name }}
         </button>
         <mat-menu #menu3="matMenu">
-            <button mat-menu-item routerLink="/profile">ACCOUNT</button>
+            <button mat-menu-item routerLink="/profile">PROFILE</button>
+            <button mat-menu-item routerLink="/account">ACCOUNT</button>
             <button mat-menu-item (click)="auth.logout()">LOGOUT</button>
-        </mat-menu> 
-        -->
+        </mat-menu>
 
     </div>
 
@@ -83,7 +73,8 @@
     <a routerLink="/">Home</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/about">About</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/download">Get It Now</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-    <a routerLink="/calendar">Calendar</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <!-- <a routerLink="/calendar">Calendar</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
+    <a routerLink="/marketplace">Marketplace</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/how-it-works">Learn</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="https://www.instagram.com/visualzapp/" target="_blank">Instagram</a>
     <br>
