--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -100,16 +100,22 @@
             </div>
             <ul class="features">
 
+                <li>NEW: Global turn &amp; stun servers.</li>
+                <li>NEW: Dedicated peer-to-peer negotiation.</li>
+                <li>
+                    These new features mean near 100% reliability for
+                    streaming to the browser, fanCam, mobile video, and more.
+                </li>
+
                 <li>NEW: Music video recorder (watermarked).</li>
                 <li>NEW: Record &amp; reuse feature.</li>
-
                 <li>Compose sets &amp; tracks of visual media.</li>
                 <li>Manual &amp; automated audio reactive scene transitioning.</li>
                 <li>Audio analysis and beat detection.</li>
                 <li>Visual effects.</li>
                 <li>Audio reactive visual effects.</li>
-                <li>Stream to browser.</li>
-                <li>OBS &amp; Zoom integration (watermarked).</li>
+                <li>Remote Streaming / Stream to browser (watermarked).</li>
+                <li>OBS &amp; Zoom integration.</li>
                 <li>Enhanced streaming connectivity with Ice & Turn server negotiation.</li>
                 <li>Auto reconnect and persistant stream urls.</li>
                 <li>Camera support.</li>
@@ -166,14 +172,16 @@
                 <span class="price"><s style="color:#333;">$40</s> $10 yearly</span>
             </div>
             <ul class="features">
-                <li><strong>Special one time price<br>$10 yearly</strong></li>
+                <li><strong>Special introductory price<br>$10 yearly</strong></li>
                 <li>All the non-commercial features plus:</li>
+
                 <li>NEW: Music video recorder (NO watermark).</li>
+
                 <li>Audience contact collection.</li>
                 <li>Fan Selfies (FanCam).</li>
                 <li>Mobile device controller.</li>
                 <li>Store media in the cloud.</li>
-                <li>OBS &amp; Zoom integration<br>(NO watermark).</li>
+                <li>Remote Streaming / Stream to browser (NO watermark).</li>
             </ul>
 
             <!-- PROD COMMERCIAL LICENSE
