--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -57,6 +57,16 @@
 
             <div class="">
                 <h2>What's New in Version 2</h2>
+
+                <!-- 6/20 -->
+                <h2>Update 2.1.4</h2>
+                <ul class='new'>
+                    <li>Added dedicated Peer to Peer Servers for streaming to the browser, better integrating with OBS
+                        and livestreaming functionality.</li>
+                    <li>Upgraded TURN (ICE) servers with relay and global availability for better streaming to the
+                        browser, better integrating with OBS and livestreaming functionality.</li>
+                </ul>
+
                 <ul class='new'>
                     <li>OBS + Zoom Livestream Integration</li>
                     <li>Muptiple external windows/diplays.</li>
@@ -84,12 +94,6 @@
                     <li>Much, much, more.</li>
                 </ul>
                 <div class="smaller">
-
-                    <!-- 6/20 -->
-                    <h2>Update 2.1.4</h2>
-                    <ul class='new'>
-                        <li>TBA...</li>
-                    </ul>
 
                     <!-- 5/20/20 -->
                     <h2>Update 2.1.3</h2>
